; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/index/extr_indexam.c_index_parallelscan_initialize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/index/extr_indexam.c_index_parallelscan_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32 (i8*)* }
%struct.TYPE_11__ = type { i32, i32, i8*, i8* }

@RELATION_CHECKS = common dso_local global i32 0, align 4
@ParallelIndexScanDescData = common dso_local global i32 0, align 4
@ps_snapshot_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @index_parallelscan_initialize(%struct.TYPE_10__* %0, %struct.TYPE_10__* %1, i32 %2, %struct.TYPE_11__* %3) #0 {
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_11__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_11__* %3, %struct.TYPE_11__** %8, align 8
  %11 = load i32, i32* @RELATION_CHECKS, align 4
  %12 = load i32, i32* @ParallelIndexScanDescData, align 4
  %13 = load i32, i32* @ps_snapshot_data, align 4
  %14 = call i32 @offsetof(i32 %12, i32 %13)
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @EstimateSnapshotSpace(i32 %15)
  %17 = call i32 @add_size(i32 %14, i32 %16)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @MAXALIGN(i32 %18)
  store i32 %19, i32* %9, align 4
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %21 = call i8* @RelationGetRelid(%struct.TYPE_10__* %20)
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %22, i32 0, i32 3
  store i8* %21, i8** %23, align 8
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %25 = call i8* @RelationGetRelid(%struct.TYPE_10__* %24)
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 2
  store i8* %25, i8** %27, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %33 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @SerializeSnapshot(i32 %31, i32 %34)
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 0
  %40 = load i32 (i8*)*, i32 (i8*)** %39, align 8
  %41 = icmp ne i32 (i8*)* %40, null
  br i1 %41, label %42, label %53

42:                                               ; preds = %4
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %44 = load i32, i32* %9, align 4
  %45 = call i8* @OffsetToPointer(%struct.TYPE_11__* %43, i32 %44)
  store i8* %45, i8** %10, align 8
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %47 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 0
  %50 = load i32 (i8*)*, i32 (i8*)** %49, align 8
  %51 = load i8*, i8** %10, align 8
  %52 = call i32 %50(i8* %51)
  br label %53

53:                                               ; preds = %42, %4
  ret void
}

declare dso_local i32 @add_size(i32, i32) #1

declare dso_local i32 @offsetof(i32, i32) #1

declare dso_local i32 @EstimateSnapshotSpace(i32) #1

declare dso_local i32 @MAXALIGN(i32) #1

declare dso_local i8* @RelationGetRelid(%struct.TYPE_10__*) #1

declare dso_local i32 @SerializeSnapshot(i32, i32) #1

declare dso_local i8* @OffsetToPointer(%struct.TYPE_11__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
